<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/et_name"
        android:hint="@string/full_name"
        android:background="@drawable/et_box"
        android:paddingStart="10dp"
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        android:layout_height="48dp"/>
    <EditText
        android:id="@+id/et_email"
        android:hint="@string/email"
        android:background="@drawable/et_box"
        android:textColorHint="@color/black"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>
    <EditText
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:background="@drawable/et_box"
        android:textColorHint="@color/black"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>
    <EditText
        android:id="@+id/et_Confirm"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/black"
        android:background="@drawable/et_box"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>
        <RadioGroup
            android:id="@+id/check_radio"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_box"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20dp"
                android:text="@string/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/radio_male"
                android:layout_marginStart="50dp"
                android:textSize="20sp"
                android:text="@string/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/radio_female"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:text="@string/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <EditText
            android:id="@+id/et_date"
            android:background="@drawable/et_box"
            android:textColorHint="@color/black"
            android:hint="Date of Birth"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_gravity="center"
            android:backgroundTint="@color/primary"
            android:textSize="30sp"
            android:layout_marginTop="50dp"
            android:text="@string/sign_up"
            android:layout_width="200dp"
            android:layout_height="60dp"/>
        

    </LinearLayout>



</RelativeLayout>