<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/primary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            android:paddingStart="15dp"
            android:textColorHint="@color/black"
            android:hint="@string/email"
            android:background="@drawable/et_box"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="25dp"
            android:layout_height="48dp"/>
        <EditText
            android:layout_marginTop="10dp"
            android:textColorHint="@color/black"
            android:paddingStart="15dp"
            android:hint="@string/password"
            android:id="@+id/et_password"
            android:background="@drawable/et_box"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="25dp"
            android:layout_height="48dp"/>

        <Button
            android:id="@+id/btn_login"
            android:backgroundTint="@color/primary"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:layout_width="200dp"
            android:layout_height="60dp"/>

        <LinearLayout
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/don_t_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/btn_register"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                android:textColor="@color/primary"
                android:text="@string/register_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </LinearLayout>



</RelativeLayout>